--- a/main.css
+++ b/main.css
@@ -9,3 +9,25 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+
+ #red { /* this selects any elements with the red id */
+    border-top-color: red;
+  }
+
+  #orange{
+  	border-top-color: orange;
+  }
+
+  #yellow{
+  	border-top-color: yellow;
+  }
+
+  #green{
+  	border-top-color: green;
+  }
+    #blue{
+  	border-top-color: blue;
+  }
+    #purple{
+  	border-top-color: purple;
+  }
